Swiggy API website

--- a/index.html
+++ b/index.html
@@ -3,28 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css"> 
+    <link rel="stylesheet" href="./style.css" />
     <title>Namaste React</title>
   </head>
   <body>
-    <h2>up</h2>
+   
     <div id="root">
-        <h1>khusboo </h1>
-    </div> 
-    <h2>down</h2>
+      <h1>Not rendered </h1>
+     
+    </div>
+   
 
-    <script
-      crossorigin
-      src="https://unpkg.com/react@18/umd/react.development.js"
-    ></script>
-    <script
-      crossorigin
-      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script> 
-
-    <!--  From here, self React Code  --> 
-      <script src="App.js">  
-        
-      </script>
+    <!--  From here, self React Code  -->
+    <script type="module" src ="./src/App.js"></script> 
   </body>
 </html>
